# zynq7000-rs

firmware/: Cargo.toml
firmware/embassy-zynq7000/: Cargo.toml
firmware/embassy-zynq7000/src/: cache.rs  chip.rs  clocks.rs  gpio.rs  gtc.rs  i2c.rs  init.rs  interrupt.rs  l2_cache.rs  lib.rs  log.rs  multicore.rs  qspi.rs  qspi_lqspi_configs.rs  runtime.rs  slcr.rs  time.rs  ttc.rs  uart.rs  usb.rs
firmware/embassy-zynq7000/src/chip/: i2c.rs  pins.rs  qspi.rs  sdmmc.rs  ttc.rs  uart.rs  usb.rs
firmware/embassy-zynq7000/src/sdmmc/: mod.rs  sd.rs
firmware/embassy-zynq7000/src/usb/: driver.rs
firmware/examples/defmt/: Cargo.toml
firmware/examples/defmt/src/: main.rs
firmware/examples/embassy/: Cargo.toml
firmware/examples/embassy/src/: main.rs
firmware/examples/simple/: Cargo.toml
firmware/examples/zedboard/src/: lib.rs  main.rs
firmware/zedboard-bsp/src/: lib.rs
firmware/zedboard-qspi-flasher/src/: main.rs
firmware/zynq7000-embassy/: Cargo.toml
firmware/zynq7000-embassy/src/: lib.rs  time.rs
firmware/zynq7000-hal/src/: devcfg.rs  dma.rs  interrupt.rs  reset.rs  usb.rs  watchdog.rs  xadc.rs
firmware/zynq7000-hal/src/sd/: adma.rs
firmware/zynq7000-hal/src/uart/: mod.rs  rx_async.rs
firmware/zynq7000/src/: devcfg.rs  eth.rs  l2_cache.rs  lib.rs  mpcore.rs  priv_tim.rs  sdio.rs  usb.rs  xadc.rs
firmware/zynq7000/src/slcr/: mod.rs  reset.rs
